# metric_work

./: .gitignore  README.md  pyproject.toml  sample_observation.json
docs/: fasttext_dataset.md
observation_labeler/: __init__.py  cli.py  model_backends.py  pipeline.py  types.py
observation_labeler/stages/: aggregate.py  fallbacks.py  fasttext.py  normalize.py  router.py  rules.py  validate.py
scripts/: build_fasttext_dataset.py  run_rogue_benchmark.py  sweep_fasttext.py  train_fasttext.py
tests/: test_observation_labeler.py
